[gd_scene load_steps=21 format=2]

[ext_resource path="res://src/HUD/small_energy_bar.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/shader/palette.gdshader" type="Shader" id=2]
[ext_resource path="res://src/effect/magic_seed_palette.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/effect/magic_seed_effect.gd" type="Script" id=4]
[ext_resource path="res://assets/audio/sfx/seed_power.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/font/ProggyClean.ttf/ProggyClean.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://src/effect/magic_seed_hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/pickups/sword/reparent_to_wearer.gd" type="Script" id=8]
[ext_resource path="res://assets/texture/star_icon.png" type="Texture" id=9]
[ext_resource path="res://src/pickups/effect/on_clone_effect.gd" type="Script" id=10]
[ext_resource path="res://src/pickups/effect/trigger_on_clone.gd" type="Script" id=11]
[ext_resource path="res://src/pickups/effect/only_sound_if_first.gd" type="Script" id=12]

[sub_resource type="Image" id=84]
data = {
"data": PoolByteArray( 151, 0, 0, 255, 215, 86, 0, 255, 255, 255, 255, 255 ),
"format": "RGBA8",
"height": 1,
"mipmaps": false,
"width": 3
}

[sub_resource type="ImageTexture" id=83]
flags = 0
flags = 0
image = SubResource( 84 )
size = Vector2( 3, 1 )

[sub_resource type="ShaderMaterial" id=74]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/palette_size = 3
shader_param/offset = 1
shader_param/blue_index_offset = 0.0
shader_param/palette = SubResource( 83 )

[sub_resource type="DynamicFont" id=71]
font_data = ExtResource( 6 )

[sub_resource type="Gradient" id=80]
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture2D" id=77]
gradient = SubResource( 80 )
width = 32
height = 8
fill_from = Vector2( 0, 1 )

[sub_resource type="Gradient" id=81]
colors = PoolColorArray( 1, 1, 0, 1, 1, 1, 0, 1 )

[sub_resource type="GradientTexture2D" id=78]
gradient = SubResource( 81 )
width = 32
height = 6
fill_from = Vector2( 0, 1 )

[node name="magic_seed_effect" type="Node2D"]
material = SubResource( 74 )
script = ExtResource( 4 )
HITBOX = ExtResource( 7 )

[node name="palette" parent="." instance=ExtResource( 3 )]
palette = PoolColorArray( 0.592157, 0, 0, 1, 0.843137, 0.337255, 0, 1, 1, 1, 1, 1 )
material = SubResource( 74 )
string_val = "[\"ff970000\",\"ffd75600\",\"ffffffff\"]"

[node name="Timer" type="Timer" parent="." groups=["magic_seed_effect"]]
process_mode = 0
wait_time = 15.0
one_shot = true
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." groups=["magic_seed_sound"]]
stream = ExtResource( 5 )
volume_db = -30.0
autoplay = true
bus = "magic_seed"
script = ExtResource( 12 )
group = "magic_seed_sound"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 4

[node name="tutorial_text" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.0
margin_top = 92.0
margin_right = 42.0
margin_bottom = 106.0
grow_horizontal = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 71 )
text = "IMPARABLE!!!"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="CanvasLayer"]
wait_time = 3.0
one_shot = true
autostart = true

[node name="display_bar" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 8.0
custom_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="display_bar"]
margin_right = 8.0
margin_bottom = 8.0
texture = ExtResource( 9 )

[node name="energy_bar" parent="display_bar" instance=ExtResource( 1 )]
margin_left = 8.0
margin_top = 0.0
margin_right = 40.0
margin_bottom = 8.0
texture_under = SubResource( 77 )
texture_progress = SubResource( 78 )
texture_progress_offset = Vector2( 0, 1 )

[node name="reparent_to_wearer" type="Node" parent="display_bar"]
script = ExtResource( 8 )

[node name="trigger_on_clone" type="Node" parent="."]
script = ExtResource( 11 )

[node name="on_clone_effect" type="Node" parent="trigger_on_clone"]
script = ExtResource( 10 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="CanvasLayer/Timer" to="CanvasLayer" method="queue_free"]
[connection signal="duplicated" from="trigger_on_clone" to="trigger_on_clone/on_clone_effect" method="apply"]
